# enw

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: quickstart.yml
src/: lib.rs  main.rs
tests/: .env  test.rs
tests/data/: .env  expected_no_command.txt  expected_with_command.txt  input_01.txt  roundtrip_expected_output_for_input_01.txt  stderr_with_file_not_found.txt  stderr_with_no_dot_env_in_directory.txt
