[package]
name = "enw"
version = "0.1.1"
authors = ["ramn <github@rymdimperiet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Similar to the GNU env command, but will automatically load an .env file, if found."
documentation = "https://docs.rs/enw"
license = "MIT/Apache-2.0"
keywords = ["env", "unix", "cli"]

[dependencies]
clap = "2.33.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
