[package]
name = "enw"
version = "0.4.0"
authors = ["ramn <github@rymdimperiet.org>"]
edition = "2018"

description = "Similar to the GNU env command, but will automatically load an .env file, if found."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/enw"
homepage = "https://github.com/ramn/enw"
repository = "https://github.com/ramn/enw"
readme = "README.md"
keywords = ["env", "unix", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
